--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome Huynh!{% endblock %}</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
@@ -14,6 +16,108 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block header %}
+            <div class="container">
+                <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" 
+                        data-toggle="collapse" data-target="#myNavbar">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
+                    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+                        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+                        <span class="fs-4">DHC Shop</span>
+                    </a>
+
+                    <ul class="nav nav-pills">
+                        <li class="nav-item"><a href="{{path ('home_page') }}" class="nav-link active" aria-current="page">Home</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">About us</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Product</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Cart <i class="bi bi-cart-fill"></i></a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Sign up</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Login</a></li>
+                    </ul>
+                </header>
+            </div>
+            <div>
+                <marquee direction="left" behavior="scroll" scrollamount="5">
+                    Welcome to the online website - DHC SHOP
+                </marquee>
+            </div>
+            <div style="color: red">
+                <marquee direction="down" width="12" height="22" behavior="alternate" >
+                    <b> <marquee behavior="alternate">
+                        N
+                    </marquee>
+                    </marquee>
+                    <b> <marquee direction="down" width="12" height="22" behavior="alternate" >
+                    <marquee behavior="alternate">
+                        E
+                    </marquee>
+                    </marquee>
+                    <b> <marquee direction="down" width="12" height="22" behavior="alternate" >
+                    <marquee behavior="alternate">
+                        W
+                    </marquee>
+                    </marquee>
+                    <b> <marquee direction="down" width="12" height="22" behavior="alternate" >
+                    <marquee behavior="alternate">
+                        P
+                    </marquee>
+                    </marquee>
+                    <b> <marquee direction="down" width="12" height="22" behavior="alternate" >
+                    <marquee behavior="alternate">
+                        R
+                    </marquee>
+                    </marquee>
+                    <marquee direction="down" width="12" height="22" behavior="alternate" >
+                    <b>   <marquee behavior="alternate">
+                        O
+                    </marquee>
+                    </marquee>
+                    <marquee direction="down" width="12" height="22" behavior="alternate" >
+                    <b>  <marquee behavior="alternate">
+                        D
+                    </marquee>
+                    </marquee>
+                    <marquee direction="down" width="12" height="22" behavior="alternate" >
+                    <b>  <marquee behavior="alternate">
+                        U
+                    </marquee>
+                    </marquee>
+                    <marquee direction="down" width="12" height="22" behavior="alternate" >
+                    <b>  <marquee behavior="alternate">
+                        C
+                    </marquee>
+                    </marquee>
+                    <marquee direction="down" width="12" height="22" behavior="alternate" >
+                    <b>  <marquee behavior="alternate">
+                        T
+                    </marquee>
+                    </marquee>
+                </div>
+        {% endblock %}
+
+        <main>
+        {% block body %}
+
+        {% endblock %}
+        </main>
+
+        {% block footer %}
+            <footer class="py-3 my-4">
+                <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                    <li class="nav-item"><a href="{{path ('home_page') }}" class="nav-link px-2 text-muted">Home</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Abou us</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contact</a></li>
+                </ul>
+            <p class="text-center text-muted">© 2022 DHC SHOP</p>
+        </footer>
+        {% endblock %}
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     </body>
 </html>
